--- a/spring-cloud-kubernetes/postgres/postgres-volume.yaml
+++ b/spring-cloud-kubernetes/postgres/postgres-volume.yaml
@@ -13,6 +13,7 @@ spec:
     - ReadWriteMany
   hostPath:
     path: "/mnt/data"
+    type: DirectoryOrCreate
 ---
 kind: PersistentVolumeClaim
 apiVersion: v1
